Updated date to 08/01/2020 - more stats added to usa map.

--- a/covid19state.html
+++ b/covid19state.html
@@ -105,6 +105,7 @@
 <script src=USAData_129.js></script>
 <script src=USAData_130.js></script>
 <script src=USAData_131.js></script>
+<script src=USAData_132.js></script>
 
 <script>
 
