--- a/covid19int.html
+++ b/covid19int.html
@@ -162,6 +162,7 @@
 <script src=IntData_129.js></script>
 <script src=IntData_130.js></script>
 <script src=IntData_131.js></script>
+<script src=IntData_132.js></script>
 
 <script>
 
