--- a/covid19reg.html
+++ b/covid19reg.html
@@ -162,6 +162,7 @@
 <script src=RegData_129.js></script>
 <script src=RegData_130.js></script>
 <script src=RegData_131.js></script>
+<script src=RegData_132.js></script>
 
 <script>
 
