--- a/covid19usa.html
+++ b/covid19usa.html
@@ -2,19 +2,19 @@
 <html>
 <meta charset = "UTF-8">
 <style type="text/css">
-	.LText { font-family: Courier; font-size:16px; font-weight:bold; vertical-align: top; text-align: left; background-color: white; }
-	.RText { font-family: Courier; font-size:16px; font-weight:bold; vertical-align: top; text-align: right; background-color: white; }
-	.CText { font-family: Courier; font-size:16px; font-weight:bold; vertical-align: top; text-align: center; color: black; background-color: white; }
-	.CCText { font-family: Courier; font-size:18px; font-weight:bold; vertical-align: top; text-align: center; color: blue; background-color: white; }
-	.ButtonC { font-family: Courier; font-size:16px; font-weight:bold; vertical-align: middle; text-align: center; color: blue; background-color: white; }
+	.LText { font-family: Courier; font-size:12px; font-weight:bold; vertical-align: top; text-align: left; background-color: white; }
+	.RText { font-family: Courier; font-size:12px; font-weight:bold; vertical-align: top; text-align: right; background-color: white; }
+	.CText { font-family: Courier; font-size:12px; font-weight:bold; vertical-align: top; text-align: center; color: black; background-color: white; }
+	.CCText { font-family: Courier; font-size:12px; font-weight:bold; vertical-align: top; text-align: center; color: blue; background-color: white; }
+	.ButtonC { font-family: Courier; font-size:14px; font-weight:bold; height:20px; width:35px; vertical-align: middle; text-align: center; color: blue; background-color: white; }
     .Table { display:table }
     .Row { display: table-row; background-color: white; height: 40px; }
     .Cell { display: table-cell; vertical-align: top; text-align: left; border: 0px solid black; padding-left: 5px; padding-right: 5px; }
     .MapCell { display: table-cell; column-span:2; vertical-align: top; border: 0px solid black; padding-left: 0px; padding-right: 0px; width:1000px}
-	.Slider { width: 300px; height: 15px; -webkit-appearance: none; -webkit-transition:0.2s; background-color:lightgray; outline:none; opacity:0.7s; transition: opacity 0.2s; }
+	.Slider { width: 200px; height: 10px; -webkit-appearance: none; -webkit-transition:0.2s; background-color:lightgray; outline:none; opacity:0.7s; transition: opacity 0.2s; }
 	.Slider:hover { opacity:1 }
 	.Slider::-webkit-slider-thumb { -webkit-appearance: none; appearance: none; width: 35px; height: 25px; background: black; cursor: pointer; }
-	.Slider::-moz-range-thumb { width: 35px; height: 25px; background: black; cursor: pointer; }
+	.Slider::-moz-range-thumb { width: 25px; height: 15px; background: black; cursor: pointer; }
 	.ShortSlider { width:100px; height: 25px; -webkit-appearance: none; -webkit-transition:0.2s; background-color:lightgray; outline:none; opacity:0.7s; transition: opacity 0.2s; }
 	.ShortSlider:hover { opacity:1 }
 	.ShortSlider::-webkit-slider-thumb { -webkit-appearance: none; appearance: none; width: 25px; height: 25px; background: #4CAF50; cursor: pointer; }
@@ -24,12 +24,12 @@
 <div class = "Table">
 	<div class = "Row">
 		<div class = "MapCell">
-			<canvas id="USAMap" width=1200 height=620 style="border:0px solid #ffffff; background-color:white;">
+			<canvas id="USAMap" width=1200 height=640 style="border:0px solid #ffffff; background-color:white;">
 			Your browser does not support HTML5
 			</canvas>
 		</div>
 	</div>
-	<div class = "Row" id="Controls" style="visibility:hidden;">
+	<div class = "Row" id="Controls" style="visibility:collapse;">
 			<div class = "Cell">
 				<button type="button" class=ButtonC id="ReverseButton">&#10074&#x25c0</button>
 				<button type="button" class=ButtonC id="PauseButton">&#10074&#10074</button>
@@ -46,7 +46,7 @@
 				<!-- <label class = "CText" id="DisplaySet">Map Description</label> -->
 			</div>
 	</div>
-	<div class = "Row">
+	<div class = "Row" id="MessageArea">
 		<label class = "CCText" id="StatusText">One moment - loading data, this may take a while.</label>
 	</div>
 </div>
@@ -128,6 +128,7 @@
 <script src=USAData_129.js></script>
 <script src=USAData_130.js></script>
 <script src=USAData_131.js></script>
+<script src=USAData_132.js></script>
 
 <script>
 
@@ -575,6 +576,9 @@ function CalcAverages2()
 				DailyCases[z-1].Cases.push(0);
 				DailyCases[z-1].TotalDeaths.push(0);
 				DailyCases[z-1].Deaths.push(0);
+
+				// make backward reference for convenience
+				ReportDate[x].Data[y].DailyCasesEntry = DailyCases[z-1];
 			}
 		}
 	}
@@ -610,6 +614,10 @@ function CalcAverages2()
 					DailyCases[z].Cases[a] = ReportDate[x].Data[y].Cases;
 					DailyCases[z].TotalDeaths[a] = ReportDate[x].Data[y].Deaths;
 					DailyCases[z].Deaths[a] = ReportDate[x].Data[y].Deaths;
+
+					// make backward reference for convenience
+					ReportDate[x].Data[y].DailyCasesEntry = DailyCases[z];
+
 					break;
 				}
 
@@ -645,6 +653,8 @@ function CalcAverages2()
 				DailyCases[x].Deaths[y] -= DailyCases[x].Deaths[y-1];
 
 		}
+		DailyCases[x].CaseRank = new Array(DailyCases[x].Date.length);
+		DailyCases[x].DeathRank = new Array(DailyCases[x].Date.length);
 		DailyCases[x].MovingAverageCases = new Array(DailyCases[x].Date.length);
 		DailyCases[x].MovingAverageDeaths = new Array(DailyCases[x].Date.length);
 		DailyCases[x].MovingAverageCases[0] = DailyCases[x].Cases[0];
@@ -699,6 +709,35 @@ function CalcAverages2()
 
 	console.log(Date.now() - StartTime + ":Incremental daily case and death counts and moving averages done.");
 
+	var sc = new Array(DailyCases.length);	// entry for each county
+	for(x=0;x<DailyCases[0].Date.length;x++)	// loop each date
+	{
+		for(y=0;y<DailyCases.length;y++)
+		{
+			sc[y] = { 
+						OriginalIndex: y, 
+						MovingAverageCases: DailyCases[y].MovingAverageCases[x],
+						MovingAverageDeaths: DailyCases[y].MovingAverageDeaths[x]
+						// MovingAverageCases: DailyCases[y].TotalCases[x],
+						// MovingAverageDeaths: DailyCases[y].TotalDeaths[x]
+					};
+		}
+
+		sc.sort(function(a,b) { return (a.MovingAverageCases - b.MovingAverageCases); } );
+
+		// assign case rankings for that date
+		for(y=0;y<DailyCases.length;y++)
+			DailyCases[sc[y].OriginalIndex].CaseRank[x] = DailyCases.length - y;
+
+		sc.sort(function(a,b) { return (a.MovingAverageDeaths - b.MovingAverageDeaths); } );
+
+		// assign death rankings for that date
+		for(y=0;y<DailyCases.length;y++)
+			DailyCases[sc[y].OriginalIndex].DeathRank[x] = DailyCases.length - y;
+	}
+
+	console.log(Date.now() - StartTime + ":Assigning national rankings done.");
+
 	StatusMsg.innerHTML = "Done, ready.";
 	Controls.style.visibility = "visible";
 	// UpdateClickData(SevereClickArea1[0],SevereClickArea1[1]);
@@ -721,7 +760,7 @@ function DaysSinceLastPeak(ReportCases)
 {
 	var Lat,Lng,x,c,Cases;
 	ctx.strokeStyle = "#000000";
-	ctx.globalAlpha = 0.7;
+	ctx.globalAlpha = 0.5;
 
 	var s = 5;
 	var Days;
@@ -731,10 +770,47 @@ function DaysSinceLastPeak(ReportCases)
 		if(ReportCases)
 			Days = DailyCases[x].DaysSincePeakCases[DateIndex];	// cases
 		else
-			Days = DailyCases[x].DaysSincePeakDeaths[DateIndex];			// deaths
+			Days = DailyCases[x].DaysSincePeakDeaths[DateIndex];// deaths
 
 		c = DecToHex(Days * 20);
 		ctx.fillStyle = "#ff" + c + c;
+		Lat = MapToCanvasY(DailyCases[x].Lat);
+		Lng = MapToCanvasX(DailyCases[x].Long);
+		// ctx.globalAlpha = 1.0;
+		ctx.beginPath();
+		ctx.arc(Lng,Lat,s,0,2*Math.PI);
+		ctx.fill();
+		// ctx.stroke();
+		ctx.closePath();
+	}
+}
+
+function NationalRanking(ReportCases)
+{
+	var Lat,Lng,x,c,Cases;
+	ctx.strokeStyle = "#000000";
+	ctx.globalAlpha = 1;
+
+	var s = 7;
+	var Rank;
+
+	ctx.fillStyle = "red";
+	for(x=0;x<DailyCases.length;x++)
+	{
+		if(ReportCases)
+			Rank = DailyCases[x].CaseRank[DateIndex];	 // cases
+		else
+			Rank = DailyCases[x].DeathRank[DateIndex];   // deaths
+
+		/*
+		c = DecToHex(Rank / 15);
+		ctx.fillStyle = "#ff" + c + c;
+		*/
+
+		if(Rank > 20)
+			continue;
+
+		// ctx.fillStyle = "#" + c + c + c;
 		Lat = MapToCanvasY(DailyCases[x].Lat);
 		Lng = MapToCanvasX(DailyCases[x].Long);
 		// ctx.globalAlpha = 1.0;
@@ -950,16 +1026,22 @@ function DrawData()
 		case	3:	// days since last peak fatalities reported
 					DaysSinceLastPeak(false);
 					break;
-		case	4:  // Daily cases raw data
+		case	4:	// National case ranking
+					NationalRanking(true);
+					break;
+		case	5:	// National fatality ranking
+					NationalRanking(false);
+					break;
+		case	6:  // Daily cases raw data
 					DrawDailyCases();
 					break;
-		case	5:	// fatality raw data
+		case	7:	// fatality raw data
 					DrawFatalities(false);
 					break;
-		case	6:	// total case data
+		case	8:	// total case data
 					DrawCaseData();
 					break;
-		case	7:	// total Deaths per county
+		case	9:	// total Deaths per county
 					DrawDeathData();
 					break;
 	}
@@ -1430,12 +1512,12 @@ function DrawClickData()
 			}
 			dy += FontSize;
 			ctx.fillStyle = "black";
-			ctx.fillText("Cases:",dx,dy);
+			ctx.fillText("Total Cases:",dx,dy);
 			ctx.fillStyle = "darkred";
 			ctx.fillText(ClickData[x].Cases,dx+StatColumn,dy);
 			dy += FontSize;
 			ctx.fillStyle = "black";
-			ctx.fillText("Deaths:",dx,dy);
+			ctx.fillText("Total Deaths:",dx,dy);
 			ctx.fillStyle = "darkred";
 			ctx.fillText(ClickData[x].Deaths,dx+StatColumn,dy);
 			/*  // recovered data is always 0 in JH data.. (shrug..)
@@ -1467,10 +1549,54 @@ function DrawClickData()
 				ctx.fillText(z + "%",dx+StatColumn,dy);
 			}
 
+			try 
+			{
+				dy += FontSize;
+				ctx.fillStyle = "black";
+				ctx.fillText(ClickData[x].DailyCasesEntry.Date[DateIndex] + " Cases:",dx,dy);
+				ctx.fillStyle = "darkred";
+				ctx.fillText(ClickData[x].DailyCasesEntry.Cases[DateIndex],dx+StatColumn,dy);
+
+				dy += FontSize;
+				ctx.fillStyle = "black";
+				ctx.fillText("10 Day Avg Cases:",dx,dy);
+				ctx.fillStyle = "darkred";
+				ctx.fillText(ClickData[x].DailyCasesEntry.MovingAverageCases[DateIndex],dx+StatColumn,dy);
+
+				dy += FontSize;
+				ctx.fillStyle = "black";
+				ctx.fillText("Nat'l Rank Avg Cases:",dx,dy);
+				ctx.fillStyle = "darkred";
+				ctx.fillText(ClickData[x].DailyCasesEntry.CaseRank[DateIndex],dx+StatColumn,dy);
+
+				dy += FontSize;
+				ctx.fillStyle = "black";
+				ctx.fillText(ClickData[x].DailyCasesEntry.Date[DateIndex] + " Deaths:",dx,dy);
+				ctx.fillStyle = "darkred";
+				ctx.fillText(ClickData[x].DailyCasesEntry.Deaths[DateIndex],dx+StatColumn,dy);
+
+				dy += FontSize;
+				ctx.fillStyle = "black";
+				ctx.fillText("10 Day Avg Deaths:",dx,dy);
+				ctx.fillStyle = "darkred";
+				ctx.fillText(ClickData[x].DailyCasesEntry.MovingAverageDeaths[DateIndex],dx+StatColumn,dy);
+
+				dy += FontSize;
+				ctx.fillStyle = "black";
+				ctx.fillText("Nat'l Rank Avg Fatal:",dx,dy);
+				ctx.fillStyle = "darkred";
+				ctx.fillText(ClickData[x].DailyCasesEntry.DeathRank[DateIndex],dx+StatColumn,dy);
+			}
+			catch(err)
+			{
+				dy += FontSize * 3;
+				ctx.fillStyle = "black";
+				ctx.fillText("- no data - ",dx,dy);
+			}
+
 			dy += 5;
 			if(ClickData[x].Pop!= 0)
 			{
-				// XYChart(TopLeft, SizeXY, XEmphasis, XYLabels, ValueSeries1, ValueSeries2)
 				ChartCases.length = 0;
 				ChartFatalities.length = 0;
 				for(y=0;y<ClickData[x].HistoryData.length;y++)
@@ -1486,7 +1612,7 @@ function DrawClickData()
 						ChartFatalities[y] = 0;
 					}
 				}
-				XYChart([dx+ChartColumn,dy-(FontSize*9)],[130,90],DateIndex,["Days since 3/22",""],ChartCases,ChartFatalities);
+				XYChart([dx+ChartColumn,BottomDrawAreaStart],[130,120],DateIndex,["Days since 3/22",""],ChartCases,ChartFatalities);
 			}
 
 			dx += DetailedStatsSpacing;
@@ -1577,10 +1703,12 @@ var DisplayOptions = [
 							"10 Day Fatality Average",				// 1
 							"Days since peak cases reported",		// 2
 							"Days since peak fatalities reported",	// 3
-							"Raw Daily Cases Reported",				// 4
-							"Raw Fatality Cases Reported",			// 5
-							"Total Cases", 							// 6
-							"Total Deaths"							// 7 
+							"20 Worst 10 Day Average Caseload",		// 4
+							"20 Worst 10 Day Average Fatalities",	// 5
+							"Raw Daily Cases Reported",				// 6
+							"Raw Fatality Cases Reported",			// 7
+							"Total Cases", 							// 8
+							"Total Deaths"							// 9 
 					];
 var DisplayIndex = 0;
 var MaxSummary = 4;
