Updated data to 08/02/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -163,6 +163,7 @@
 <script src=IntData_130.js></script>
 <script src=IntData_131.js></script>
 <script src=IntData_132.js></script>
+<script src=IntData_133.js></script>
 
 <script>
 
