--- a/covid19reg.html
+++ b/covid19reg.html
@@ -163,6 +163,7 @@
 <script src=RegData_130.js></script>
 <script src=RegData_131.js></script>
 <script src=RegData_132.js></script>
+<script src=RegData_133.js></script>
 
 <script>
 
