--- a/covid19usa.html
+++ b/covid19usa.html
@@ -129,6 +129,7 @@
 <script src=USAData_130.js></script>
 <script src=USAData_131.js></script>
 <script src=USAData_132.js></script>
+<script src=USAData_133.js></script>
 
 <script>
 
