Updated date to 08/03/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -164,6 +164,7 @@
 <script src=IntData_131.js></script>
 <script src=IntData_132.js></script>
 <script src=IntData_133.js></script>
+<script src=IntData_134.js></script>
 
 <script>
 
