--- a/covid19reg.html
+++ b/covid19reg.html
@@ -164,6 +164,7 @@
 <script src=RegData_131.js></script>
 <script src=RegData_132.js></script>
 <script src=RegData_133.js></script>
+<script src=RegData_134.js></script>
 
 <script>
 
