--- a/covid19state.html
+++ b/covid19state.html
@@ -107,6 +107,7 @@
 <script src=USAData_131.js></script>
 <script src=USAData_132.js></script>
 <script src=USAData_133.js></script>
+<script src=USAData_134.js></script>
 
 <script>
 
