Updated date to 08/04/2020. USAMap rankings shows rank numbers.

--- a/covid19int.html
+++ b/covid19int.html
@@ -165,6 +165,7 @@
 <script src=IntData_132.js></script>
 <script src=IntData_133.js></script>
 <script src=IntData_134.js></script>
+<script src=IntData_135.js></script>
 
 <script>
 
