--- a/covid19reg.html
+++ b/covid19reg.html
@@ -165,6 +165,7 @@
 <script src=RegData_132.js></script>
 <script src=RegData_133.js></script>
 <script src=RegData_134.js></script>
+<script src=RegData_135.js></script>
 
 <script>
 
