--- a/covid19state.html
+++ b/covid19state.html
@@ -108,6 +108,7 @@
 <script src=USAData_132.js></script>
 <script src=USAData_133.js></script>
 <script src=USAData_134.js></script>
+<script src=USAData_135.js></script>
 
 <script>
 
