Updated data to 08/06/2020

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -166,6 +166,7 @@
 <script src=RegData_133.js></script>
 <script src=RegData_134.js></script>
 <script src=RegData_135.js></script>
+<script src=RegData_136.js></script>
 
 <script>
 
