--- a/covid19int.html
+++ b/covid19int.html
@@ -166,6 +166,7 @@
 <script src=IntData_133.js></script>
 <script src=IntData_134.js></script>
 <script src=IntData_135.js></script>
+<script src=IntData_136.js></script>
 
 <script>
 
