Updated data to 08/06/2020

--- a/covid19state.html
+++ b/covid19state.html
@@ -110,6 +110,7 @@
 <script src=USAData_134.js></script>
 <script src=USAData_135.js></script>
 <script src=USAData_136.js></script>
+<script src=USAData_137.js></script>
 
 <script>
 
