--- a/covid19int.html
+++ b/covid19int.html
@@ -167,6 +167,7 @@
 <script src=IntData_134.js></script>
 <script src=IntData_135.js></script>
 <script src=IntData_136.js></script>
+<script src=IntData_137.js></script>
 
 <script>
 
