--- a/covid19reg.html
+++ b/covid19reg.html
@@ -167,6 +167,7 @@
 <script src=RegData_134.js></script>
 <script src=RegData_135.js></script>
 <script src=RegData_136.js></script>
+<script src=RegData_137.js></script>
 
 <script>
 
