Updated date to 08/07/2020

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -168,6 +168,7 @@
 <script src=RegData_135.js></script>
 <script src=RegData_136.js></script>
 <script src=RegData_137.js></script>
+<script src=RegData_138.js></script>
 
 <script>
 
