--- a/covid19int.html
+++ b/covid19int.html
@@ -168,6 +168,7 @@
 <script src=IntData_135.js></script>
 <script src=IntData_136.js></script>
 <script src=IntData_137.js></script>
+<script src=IntData_138.js></script>
 
 <script>
 
