--- a/covid19state.html
+++ b/covid19state.html
@@ -111,6 +111,7 @@
 <script src=USAData_135.js></script>
 <script src=USAData_136.js></script>
 <script src=USAData_137.js></script>
+<script src=USAData_138.js></script>
 
 <script>
 
