Updated data to 08/08/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -169,6 +169,7 @@
 <script src=IntData_136.js></script>
 <script src=IntData_137.js></script>
 <script src=IntData_138.js></script>
+<script src=IntData_139.js></script>
 
 <script>
 
