--- a/covid19usa.html
+++ b/covid19usa.html
@@ -135,6 +135,7 @@
 <script src=USAData_136.js></script>
 <script src=USAData_137.js></script>
 <script src=USAData_138.js></script>
+<script src=USAData_139.js></script>
 
 <script>
 
