--- a/covid19reg.html
+++ b/covid19reg.html
@@ -169,6 +169,7 @@
 <script src=RegData_136.js></script>
 <script src=RegData_137.js></script>
 <script src=RegData_138.js></script>
+<script src=RegData_139.js></script>
 
 <script>
 
