Updated date to 08/09/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -170,6 +170,7 @@
 <script src=IntData_137.js></script>
 <script src=IntData_138.js></script>
 <script src=IntData_139.js></script>
+<script src=IntData_140.js></script>
 
 <script>
 
