--- a/covid19reg.html
+++ b/covid19reg.html
@@ -170,6 +170,7 @@
 <script src=RegData_137.js></script>
 <script src=RegData_138.js></script>
 <script src=RegData_139.js></script>
+<script src=RegData_140.js></script>
 
 <script>
 
