--- a/covid19state.html
+++ b/covid19state.html
@@ -113,6 +113,7 @@
 <script src=USAData_137.js></script>
 <script src=USAData_138.js></script>
 <script src=USAData_139.js></script>
+<script src=USAData_140.js></script>
 
 <script>
 
