Updated date to 08/10/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -171,6 +171,7 @@
 <script src=IntData_138.js></script>
 <script src=IntData_139.js></script>
 <script src=IntData_140.js></script>
+<script src=IntData_141.js></script>
 
 <script>
 
