--- a/covid19reg.html
+++ b/covid19reg.html
@@ -171,6 +171,7 @@
 <script src=RegData_138.js></script>
 <script src=RegData_139.js></script>
 <script src=RegData_140.js></script>
+<script src=RegData_141.js></script>
 
 <script>
 
