--- a/covid19state.html
+++ b/covid19state.html
@@ -114,6 +114,7 @@
 <script src=USAData_138.js></script>
 <script src=USAData_139.js></script>
 <script src=USAData_140.js></script>
+<script src=USAData_141.js></script>
 
 <script>
 
