--- a/covid19int.html
+++ b/covid19int.html
@@ -172,6 +172,7 @@
 <script src=IntData_139.js></script>
 <script src=IntData_140.js></script>
 <script src=IntData_141.js></script>
+<script src=IntData_142.js></script>
 
 <script>
 
