--- a/covid19usa.html
+++ b/covid19usa.html
@@ -138,6 +138,7 @@
 <script src=USAData_139.js></script>
 <script src=USAData_140.js></script>
 <script src=USAData_141.js></script>
+<script src=USAData_142.js></script>
 
 <script>
 
