Updated data to 08/12/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -173,6 +173,7 @@
 <script src=IntData_140.js></script>
 <script src=IntData_141.js></script>
 <script src=IntData_142.js></script>
+<script src=IntData_143.js></script>
 
 <script>
 
