--- a/covid19reg.html
+++ b/covid19reg.html
@@ -173,6 +173,7 @@
 <script src=RegData_140.js></script>
 <script src=RegData_141.js></script>
 <script src=RegData_142.js></script>
+<script src=RegData_143.js></script>
 
 <script>
 
