--- a/covid19state.html
+++ b/covid19state.html
@@ -116,6 +116,7 @@
 <script src=USAData_140.js></script>
 <script src=USAData_141.js></script>
 <script src=USAData_142.js></script>
+<script src=USAData_143.js></script>
 
 <script>
 
