Updated data to 08/14/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -175,6 +175,7 @@
 <script src=IntData_142.js></script>
 <script src=IntData_143.js></script>
 <script src=IntData_144.js></script>
+<script src=IntData_145.js></script>
 
 <script>
 
