--- a/covid19state.html
+++ b/covid19state.html
@@ -118,6 +118,7 @@
 <script src=USAData_142.js></script>
 <script src=USAData_143.js></script>
 <script src=USAData_144.js></script>
+<script src=USAData_145.js></script>
 
 <script>
 
