--- a/covid19reg.html
+++ b/covid19reg.html
@@ -175,6 +175,7 @@
 <script src=RegData_142.js></script>
 <script src=RegData_143.js></script>
 <script src=RegData_144.js></script>
+<script src=RegData_145.js></script>
 
 <script>
 
