Updated dates 08/15/2020 and 08/16/2020

--- a/covid19state.html
+++ b/covid19state.html
@@ -119,6 +119,8 @@
 <script src=USAData_143.js></script>
 <script src=USAData_144.js></script>
 <script src=USAData_145.js></script>
+<script src=USAData_146.js></script>
+<script src=USAData_147.js></script>
 
 <script>
 
