--- a/covid19int.html
+++ b/covid19int.html
@@ -176,6 +176,8 @@
 <script src=IntData_143.js></script>
 <script src=IntData_144.js></script>
 <script src=IntData_145.js></script>
+<script src=IntData_146.js></script>
+<script src=IntData_147.js></script>
 
 <script>
 
