--- a/covid19reg.html
+++ b/covid19reg.html
@@ -176,6 +176,8 @@
 <script src=RegData_143.js></script>
 <script src=RegData_144.js></script>
 <script src=RegData_145.js></script>
+<script src=RegData_146.js></script>
+<script src=RegData_147.js></script>
 
 <script>
 
