Updated data to 08/17/2020

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -178,6 +178,7 @@
 <script src=RegData_145.js></script>
 <script src=RegData_146.js></script>
 <script src=RegData_147.js></script>
+<script src=RegData_148.js></script>
 
 <script>
 
