--- a/covid19state.html
+++ b/covid19state.html
@@ -121,6 +121,7 @@
 <script src=USAData_145.js></script>
 <script src=USAData_146.js></script>
 <script src=USAData_147.js></script>
+<script src=USAData_148.js></script>
 
 <script>
 
