--- a/covid19int.html
+++ b/covid19int.html
@@ -178,6 +178,7 @@
 <script src=IntData_145.js></script>
 <script src=IntData_146.js></script>
 <script src=IntData_147.js></script>
+<script src=IntData_148.js></script>
 
 <script>
 
