Updated data to 08/18/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -179,6 +179,7 @@
 <script src=IntData_146.js></script>
 <script src=IntData_147.js></script>
 <script src=IntData_148.js></script>
+<script src=IntData_149.js></script>
 
 <script>
 
