--- a/covid19reg.html
+++ b/covid19reg.html
@@ -179,6 +179,7 @@
 <script src=RegData_146.js></script>
 <script src=RegData_147.js></script>
 <script src=RegData_148.js></script>
+<script src=RegData_149.js></script>
 
 <script>
 
