--- a/covid19state.html
+++ b/covid19state.html
@@ -122,6 +122,7 @@
 <script src=USAData_146.js></script>
 <script src=USAData_147.js></script>
 <script src=USAData_148.js></script>
+<script src=USAData_149.js></script>
 
 <script>
 
