Updated data to 08/19/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -180,6 +180,7 @@
 <script src=IntData_147.js></script>
 <script src=IntData_148.js></script>
 <script src=IntData_149.js></script>
+<script src=IntData_150.js></script>
 
 <script>
 
