--- a/covid19reg.html
+++ b/covid19reg.html
@@ -180,6 +180,7 @@
 <script src=RegData_147.js></script>
 <script src=RegData_148.js></script>
 <script src=RegData_149.js></script>
+<script src=RegData_150.js></script>
 
 <script>
 
