--- a/covid19state.html
+++ b/covid19state.html
@@ -123,6 +123,7 @@
 <script src=USAData_147.js></script>
 <script src=USAData_148.js></script>
 <script src=USAData_149.js></script>
+<script src=USAData_150.js></script>
 
 <script>
 
