Updated data to 08/20/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -181,6 +181,7 @@
 <script src=IntData_148.js></script>
 <script src=IntData_149.js></script>
 <script src=IntData_150.js></script>
+<script src=IntData_151.js></script>
 
 <script>
 
