--- a/covid19reg.html
+++ b/covid19reg.html
@@ -181,6 +181,7 @@
 <script src=RegData_148.js></script>
 <script src=RegData_149.js></script>
 <script src=RegData_150.js></script>
+<script src=RegData_151.js></script>
 
 <script>
 
