--- a/covid19state.html
+++ b/covid19state.html
@@ -124,6 +124,7 @@
 <script src=USAData_148.js></script>
 <script src=USAData_149.js></script>
 <script src=USAData_150.js></script>
+<script src=USAData_151.js></script>
 
 <script>
 
