--- a/covid19usa.html
+++ b/covid19usa.html
@@ -149,6 +149,7 @@
 <script src=USAData_148.js></script>
 <script src=USAData_149.js></script>
 <script src=USAData_150.js></script>
+<script src=USAData_151.js></script>
 
 <script>
 
