Updated data to 08/21/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -182,6 +182,7 @@
 <script src=IntData_149.js></script>
 <script src=IntData_150.js></script>
 <script src=IntData_151.js></script>
+<script src=IntData_152.js></script>
 
 <script>
 
