--- a/covid19reg.html
+++ b/covid19reg.html
@@ -182,6 +182,7 @@
 <script src=RegData_149.js></script>
 <script src=RegData_150.js></script>
 <script src=RegData_151.js></script>
+<script src=RegData_152.js></script>
 
 <script>
 
