--- a/covid19usa.html
+++ b/covid19usa.html
@@ -150,6 +150,7 @@
 <script src=USAData_149.js></script>
 <script src=USAData_150.js></script>
 <script src=USAData_151.js></script>
+<script src=USAData_152.js></script>
 
 <script>
 
