Updated date to 08/22/2020

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -183,6 +183,7 @@
 <script src=RegData_150.js></script>
 <script src=RegData_151.js></script>
 <script src=RegData_152.js></script>
+<script src=RegData_153.js></script>
 
 <script>
 
