--- a/covid19state.html
+++ b/covid19state.html
@@ -126,6 +126,7 @@
 <script src=USAData_150.js></script>
 <script src=USAData_151.js></script>
 <script src=USAData_152.js></script>
+<script src=USAData_153.js></script>
 
 <script>
 
