--- a/covid19int.html
+++ b/covid19int.html
@@ -183,6 +183,7 @@
 <script src=IntData_150.js></script>
 <script src=IntData_151.js></script>
 <script src=IntData_152.js></script>
+<script src=IntData_153.js></script>
 
 <script>
 
