--- a/covid19int.html
+++ b/covid19int.html
@@ -184,6 +184,7 @@
 <script src=IntData_151.js></script>
 <script src=IntData_152.js></script>
 <script src=IntData_153.js></script>
+<script src=IntData_154.js></script>
 
 <script>
 
