--- a/covid19reg.html
+++ b/covid19reg.html
@@ -184,6 +184,7 @@
 <script src=RegData_151.js></script>
 <script src=RegData_152.js></script>
 <script src=RegData_153.js></script>
+<script src=RegData_154.js></script>
 
 <script>
 
