--- a/covid19usa.html
+++ b/covid19usa.html
@@ -152,6 +152,7 @@
 <script src=USAData_151.js></script>
 <script src=USAData_152.js></script>
 <script src=USAData_153.js></script>
+<script src=USAData_154.js></script>
 
 <script>
 
