Updated data to 08/24/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -185,6 +185,7 @@
 <script src=IntData_152.js></script>
 <script src=IntData_153.js></script>
 <script src=IntData_154.js></script>
+<script src=IntData_155.js></script>
 
 <script>
 
