--- a/covid19reg.html
+++ b/covid19reg.html
@@ -185,6 +185,7 @@
 <script src=RegData_152.js></script>
 <script src=RegData_153.js></script>
 <script src=RegData_154.js></script>
+<script src=RegData_155.js></script>
 
 <script>
 
