--- a/covid19state.html
+++ b/covid19state.html
@@ -128,6 +128,7 @@
 <script src=USAData_152.js></script>
 <script src=USAData_153.js></script>
 <script src=USAData_154.js></script>
+<script src=USAData_155.js></script>
 
 <script>
 
