--- a/covid19usa.html
+++ b/covid19usa.html
@@ -153,6 +153,7 @@
 <script src=USAData_152.js></script>
 <script src=USAData_153.js></script>
 <script src=USAData_154.js></script>
+<script src=USAData_155.js></script>
 
 <script>
 
