Updated data to 08/26/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -187,6 +187,7 @@
 <script src=IntData_154.js></script>
 <script src=IntData_155.js></script>
 <script src=IntData_156.js></script>
+<script src=IntData_157.js></script>
 
 <script>
 
