--- a/covid19reg.html
+++ b/covid19reg.html
@@ -187,6 +187,7 @@
 <script src=RegData_154.js></script>
 <script src=RegData_155.js></script>
 <script src=RegData_156.js></script>
+<script src=RegData_157.js></script>
 
 <script>
 
