--- a/covid19usa.html
+++ b/covid19usa.html
@@ -155,6 +155,7 @@
 <script src=USAData_154.js></script>
 <script src=USAData_155.js></script>
 <script src=USAData_156.js></script>
+<script src=USAData_157.js></script>
 
 <script>
 
