Updated data to 08/27/2020

--- a/covid19usa.html
+++ b/covid19usa.html
@@ -156,6 +156,7 @@
 <script src=USAData_155.js></script>
 <script src=USAData_156.js></script>
 <script src=USAData_157.js></script>
+<script src=USAData_158.js></script>
 
 <script>
 
