--- a/covid19int.html
+++ b/covid19int.html
@@ -188,6 +188,7 @@
 <script src=IntData_155.js></script>
 <script src=IntData_156.js></script>
 <script src=IntData_157.js></script>
+<script src=IntData_158.js></script>
 
 <script>
 
