--- a/covid19reg.html
+++ b/covid19reg.html
@@ -188,6 +188,7 @@
 <script src=RegData_155.js></script>
 <script src=RegData_156.js></script>
 <script src=RegData_157.js></script>
+<script src=RegData_158.js></script>
 
 <script>
 
