--- a/covid19state.html
+++ b/covid19state.html
@@ -131,6 +131,7 @@
 <script src=USAData_155.js></script>
 <script src=USAData_156.js></script>
 <script src=USAData_157.js></script>
+<script src=USAData_158.js></script>
 
 <script>
 
