Updated date to 08/28/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -189,6 +189,7 @@
 <script src=IntData_156.js></script>
 <script src=IntData_157.js></script>
 <script src=IntData_158.js></script>
+<script src=IntData_159.js></script>
 
 <script>
 
