--- a/covid19reg.html
+++ b/covid19reg.html
@@ -189,6 +189,7 @@
 <script src=RegData_156.js></script>
 <script src=RegData_157.js></script>
 <script src=RegData_158.js></script>
+<script src=RegData_159.js></script>
 
 <script>
 
