--- a/covid19usa.html
+++ b/covid19usa.html
@@ -157,6 +157,7 @@
 <script src=USAData_156.js></script>
 <script src=USAData_157.js></script>
 <script src=USAData_158.js></script>
+<script src=USAData_159.js></script>
 
 <script>
 
