--- a/covid19int.html
+++ b/covid19int.html
@@ -190,6 +190,7 @@
 <script src=IntData_157.js></script>
 <script src=IntData_158.js></script>
 <script src=IntData_159.js></script>
+<script src=IntData_160.js></script>
 
 <script>
 
