--- a/covid19reg.html
+++ b/covid19reg.html
@@ -190,6 +190,7 @@
 <script src=RegData_157.js></script>
 <script src=RegData_158.js></script>
 <script src=RegData_159.js></script>
+<script src=RegData_160.js></script>
 
 <script>
 
