--- a/covid19state.html
+++ b/covid19state.html
@@ -133,6 +133,7 @@
 <script src=USAData_157.js></script>
 <script src=USAData_158.js></script>
 <script src=USAData_159.js></script>
+<script src=USAData_160.js></script>
 
 <script>
 
