--- a/covid19usa.html
+++ b/covid19usa.html
@@ -158,6 +158,7 @@
 <script src=USAData_157.js></script>
 <script src=USAData_158.js></script>
 <script src=USAData_159.js></script>
+<script src=USAData_160.js></script>
 
 <script>
 
