--- a/covid19int.html
+++ b/covid19int.html
@@ -191,6 +191,7 @@
 <script src=IntData_158.js></script>
 <script src=IntData_159.js></script>
 <script src=IntData_160.js></script>
+<script src=IntData_161.js></script>
 
 <script>
 
