--- a/covid19reg.html
+++ b/covid19reg.html
@@ -191,6 +191,7 @@
 <script src=RegData_158.js></script>
 <script src=RegData_159.js></script>
 <script src=RegData_160.js></script>
+<script src=RegData_161.js></script>
 
 <script>
 
