--- a/covid19usa.html
+++ b/covid19usa.html
@@ -159,6 +159,7 @@
 <script src=USAData_158.js></script>
 <script src=USAData_159.js></script>
 <script src=USAData_160.js></script>
+<script src=USAData_161.js></script>
 
 <script>
 
