Updated data to 08/31/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -192,6 +192,7 @@
 <script src=IntData_159.js></script>
 <script src=IntData_160.js></script>
 <script src=IntData_161.js></script>
+<script src=IntData_162.js></script>
 
 <script>
 
