--- a/covid19usa.html
+++ b/covid19usa.html
@@ -160,6 +160,7 @@
 <script src=USAData_159.js></script>
 <script src=USAData_160.js></script>
 <script src=USAData_161.js></script>
+<script src=USAData_162.js></script>
 
 <script>
 
@@ -692,6 +693,8 @@ function CalcAverages2()
 		DailyCases[x].MovingAverageDeaths[0] = DailyCases[x].Deaths[0];
 		DailyCases[x].DaysSincePeakCases = new Array(DailyCases[x].Date.length);
 		DailyCases[x].DaysSincePeakDeaths = new Array(DailyCases[x].Date.length);
+		DailyCases[x].MovingAveragePercentCaseGrowth = new Array(DailyCases[x].Date.length);
+		DailyCases[x].MovingAveragePercentDeathGrowth = new Array(DailyCases[x].Date.length);
 		DailyCases[x].DaysSincePeakCases[0] = DailyCases[x].Date.length-1;
 		DailyCases[x].DaysSincePeakDeaths[0] = DailyCases[x].Date.length-1;
 		DailyCases[x].PeakCaseIndex = 0;
@@ -734,12 +737,24 @@ function CalcAverages2()
 				}
 				DailyCases[x].MovingAverageCases[y] = Math.ceil(MovingAverageTotalCases / ActualMovingAveragePeriod);
 				DailyCases[x].MovingAverageDeaths[y] = Math.ceil(MovingAverageTotalDeaths / ActualMovingAveragePeriod);
+
+				if(ActualMovingAveragePeriod < MovingAveragePeriod)
+				{
+					DailyCases[x].MovingAveragePercentCaseGrowth[y] = (DailyCases[x].MovingAverageCases[y] - DailyCases[x].Cases[0]) / DailyCases[x].Cases[0];
+					DailyCases[x].MovingAveragePercentDeathGrowth[y] = (DailyCases[x].MovingAverageDeaths[y] - DailyCases[x].Deaths[0]) / DailyCases[x].Deaths[0];
+				}
+				else
+				{
+					DailyCases[x].MovingAveragePercentCaseGrowth[y] = (DailyCases[x].MovingAverageCases[y] - DailyCases[x].MovingAverageCases[y-MovingAveragePeriod]) / DailyCases[x].MovingAverageCases[y];
+					DailyCases[x].MovingAveragePercentDeathGrowth[y] = (DailyCases[x].MovingAverageDeaths[y] - DailyCases[x].MovingAverageDeaths[y-MovingAveragePeriod]) / DailyCases[x].MovingAverageDeaths[y-MovingAveragePeriod];
+				}
 			}
 		}
 	}
 
 	console.log(Date.now() - StartTime + ":Incremental daily case and death counts and moving averages done.");
 
+	// Calculate national rankings
 	var sc = new Array(DailyCases.length);	// entry for each county
 	for(x=0;x<DailyCases[0].Date.length;x++)	// loop each date
 	{
@@ -1082,6 +1097,9 @@ function DrawData()
 					break;
 		case	9:	// total Deaths per county
 					DrawDeathData();
+					break;
+		case	10:	// Growing / Receding trend
+					DrawGrowth();
 					break;
 	}
 }
@@ -1733,6 +1751,7 @@ var SeverityColors = [ "#c0c0c0", "#ff6a1f", "#ba4000", "#ff0000" ];
 var DeathSeverityColors = [ "#808080", "#c0c0c0", "#ba4000", "#ff4000", "#ff0000" ];
 var DeathRateColors = [ "#c0c0c0", "#a0a0a0", "#808080", "#404040", "#000000" ];
 var GrowthRateColors = [ "#ffffff", "#ffc0c0", "#ffa090", "#ff7050", "#ff3600", "#ff0000" ];
+var GrowthPercentColors = [ "#186a3b", "#239b56", "#2ecc71", "#82e0aa", "#eafaf1", "#fbeee6", "#edbb99", "#dc7633", "#a04000", "#6e2c00" ];
 var canvas = document.getElementById("USAMap");
 var ctx = canvas.getContext("2d");
 var DrawScaleFactor = 2;
@@ -1747,7 +1766,8 @@ var DisplayOptions = [
 							"Raw Daily Cases Reported",				// 6
 							"Raw Fatality Cases Reported",			// 7
 							"Total Cases", 							// 8
-							"Total Deaths"							// 9 
+							"Total Deaths" 							// 9 
+							// "Growing or Receding Trends"			// 10
 					];
 var DisplayIndex = 0;
 var MaxSummary = 4;
