--- a/covid19reg.html
+++ b/covid19reg.html
@@ -192,6 +192,7 @@
 <script src=RegData_159.js></script>
 <script src=RegData_160.js></script>
 <script src=RegData_161.js></script>
+<script src=RegData_162.js></script>
 
 <script>
 
