--- a/covid19state.html
+++ b/covid19state.html
@@ -135,6 +135,7 @@
 <script src=USAData_159.js></script>
 <script src=USAData_160.js></script>
 <script src=USAData_161.js></script>
+<script src=USAData_162.js></script>
 
 <script>
 
