Updated date to 09/01/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -193,6 +193,7 @@
 <script src=IntData_160.js></script>
 <script src=IntData_161.js></script>
 <script src=IntData_162.js></script>
+<script src=IntData_163.js></script>
 
 <script>
 
