--- a/covid19reg.html
+++ b/covid19reg.html
@@ -193,6 +193,7 @@
 <script src=RegData_160.js></script>
 <script src=RegData_161.js></script>
 <script src=RegData_162.js></script>
+<script src=RegData_163.js></script>
 
 <script>
 
