--- a/covid19state.html
+++ b/covid19state.html
@@ -136,6 +136,7 @@
 <script src=USAData_160.js></script>
 <script src=USAData_161.js></script>
 <script src=USAData_162.js></script>
+<script src=USAData_163.js></script>
 
 <script>
 
