Updated date to 09/02/2020, added growth maps

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -194,6 +194,7 @@
 <script src=RegData_161.js></script>
 <script src=RegData_162.js></script>
 <script src=RegData_163.js></script>
+<script src=RegData_164.js></script>
 
 <script>
 
