--- a/covid19int.html
+++ b/covid19int.html
@@ -194,6 +194,7 @@
 <script src=IntData_161.js></script>
 <script src=IntData_162.js></script>
 <script src=IntData_163.js></script>
+<script src=IntData_164.js></script>
 
 <script>
 
