--- a/covid19state.html
+++ b/covid19state.html
@@ -137,6 +137,7 @@
 <script src=USAData_161.js></script>
 <script src=USAData_162.js></script>
 <script src=USAData_163.js></script>
+<script src=USAData_164.js></script>
 
 <script>
 
