--- a/covid19usa.html
+++ b/covid19usa.html
@@ -163,6 +163,7 @@
 <script src=USAData_162.js></script>
 <script src=USAData_163.js></script>
 <script src=USAData_164.js></script>
+<script src=USAData_165.js></script>
 
 <script>
 
