--- a/covid19reg.html
+++ b/covid19reg.html
@@ -196,6 +196,7 @@
 <script src=RegData_163.js></script>
 <script src=RegData_164.js></script>
 <script src=RegData_165.js></script>
+<script src=RegData_166.js></script>
 
 <script>
 
