--- a/covid19state.html
+++ b/covid19state.html
@@ -139,6 +139,7 @@
 <script src=USAData_163.js></script>
 <script src=USAData_164.js></script>
 <script src=USAData_165.js></script>
+<script src=USAData_166.js></script>
 
 <script>
 
