--- a/covid19int.html
+++ b/covid19int.html
@@ -198,6 +198,7 @@
 <script src=IntData_165.js></script>
 <script src=IntData_166.js></script>
 <script src=IntData_167.js></script>
+<script src=IntData_168.js></script>
 
 <script>
 
