--- a/covid19reg.html
+++ b/covid19reg.html
@@ -198,6 +198,7 @@
 <script src=RegData_165.js></script>
 <script src=RegData_166.js></script>
 <script src=RegData_167.js></script>
+<script src=RegData_168.js></script>
 
 <script>
 
