--- a/covid19int.html
+++ b/covid19int.html
@@ -199,6 +199,7 @@
 <script src=IntData_166.js></script>
 <script src=IntData_167.js></script>
 <script src=IntData_168.js></script>
+<script src=IntData_169.js></script>
 
 <script>
 
