--- a/covid19reg.html
+++ b/covid19reg.html
@@ -199,6 +199,7 @@
 <script src=RegData_166.js></script>
 <script src=RegData_167.js></script>
 <script src=RegData_168.js></script>
+<script src=RegData_169.js></script>
 
 <script>
 
