--- a/covid19usa.html
+++ b/covid19usa.html
@@ -167,6 +167,7 @@
 <script src=USAData_166.js></script>
 <script src=USAData_167.js></script>
 <script src=USAData_168.js></script>
+<script src=USAData_169.js></script>
 
 <script>
 
