Updated data to 09/08/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -200,6 +200,7 @@
 <script src=IntData_167.js></script>
 <script src=IntData_168.js></script>
 <script src=IntData_169.js></script>
+<script src=IntData_170.js></script>
 
 <script>
 
