--- a/covid19reg.html
+++ b/covid19reg.html
@@ -200,6 +200,7 @@
 <script src=RegData_167.js></script>
 <script src=RegData_168.js></script>
 <script src=RegData_169.js></script>
+<script src=RegData_170.js></script>
 
 <script>
 
