--- a/covid19state.html
+++ b/covid19state.html
@@ -143,6 +143,7 @@
 <script src=USAData_167.js></script>
 <script src=USAData_168.js></script>
 <script src=USAData_169.js></script>
+<script src=USAData_170.js></script>
 
 <script>
 
