Updated data to 09/09/2020

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -201,6 +201,7 @@
 <script src=RegData_168.js></script>
 <script src=RegData_169.js></script>
 <script src=RegData_170.js></script>
+<script src=RegData_171.js></script>
 
 <script>
 
