--- a/covid19int.html
+++ b/covid19int.html
@@ -201,6 +201,7 @@
 <script src=IntData_168.js></script>
 <script src=IntData_169.js></script>
 <script src=IntData_170.js></script>
+<script src=IntData_171.js></script>
 
 <script>
 
