Updated data to 09/10/2020

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -202,6 +202,7 @@
 <script src=RegData_169.js></script>
 <script src=RegData_170.js></script>
 <script src=RegData_171.js></script>
+<script src=RegData_172.js></script>
 
 <script>
 
