--- a/covid19int.html
+++ b/covid19int.html
@@ -202,6 +202,7 @@
 <script src=IntData_169.js></script>
 <script src=IntData_170.js></script>
 <script src=IntData_171.js></script>
+<script src=IntData_172.js></script>
 
 <script>
 
