--- a/covid19usa.html
+++ b/covid19usa.html
@@ -170,6 +170,7 @@
 <script src=USAData_169.js></script>
 <script src=USAData_170.js></script>
 <script src=USAData_171.js></script>
+<script src=USAData_172.js></script>
 
 <script>
 
