Updated data to 09/12/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -204,6 +204,7 @@
 <script src=IntData_171.js></script>
 <script src=IntData_172.js></script>
 <script src=IntData_173.js></script>
+<script src=IntData_174.js></script>
 
 <script>
 
