--- a/covid19reg.html
+++ b/covid19reg.html
@@ -204,6 +204,7 @@
 <script src=RegData_171.js></script>
 <script src=RegData_172.js></script>
 <script src=RegData_173.js></script>
+<script src=RegData_174.js></script>
 
 <script>
 
