--- a/covid19state.html
+++ b/covid19state.html
@@ -147,6 +147,7 @@
 <script src=USAData_171.js></script>
 <script src=USAData_172.js></script>
 <script src=USAData_173.js></script>
+<script src=USAData_174.js></script>
 
 <script>
 
