Updated date to 09/13/2020

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -205,6 +205,7 @@
 <script src=RegData_172.js></script>
 <script src=RegData_173.js></script>
 <script src=RegData_174.js></script>
+<script src=RegData_175.js></script>
 
 <script>
 
