--- a/covid19int.html
+++ b/covid19int.html
@@ -205,6 +205,7 @@
 <script src=IntData_172.js></script>
 <script src=IntData_173.js></script>
 <script src=IntData_174.js></script>
+<script src=IntData_175.js></script>
 
 <script>
 
