--- a/covid19usa.html
+++ b/covid19usa.html
@@ -173,6 +173,7 @@
 <script src=USAData_172.js></script>
 <script src=USAData_173.js></script>
 <script src=USAData_174.js></script>
+<script src=USAData_175.js></script>
 
 <script>
 
