Updated data to 09/14/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -206,6 +206,7 @@
 <script src=IntData_173.js></script>
 <script src=IntData_174.js></script>
 <script src=IntData_175.js></script>
+<script src=IntData_176.js></script>
 
 <script>
 
