--- a/covid19reg.html
+++ b/covid19reg.html
@@ -206,6 +206,7 @@
 <script src=RegData_173.js></script>
 <script src=RegData_174.js></script>
 <script src=RegData_175.js></script>
+<script src=RegData_176.js></script>
 
 <script>
 
