--- a/covid19usa.html
+++ b/covid19usa.html
@@ -174,6 +174,7 @@
 <script src=USAData_173.js></script>
 <script src=USAData_174.js></script>
 <script src=USAData_175.js></script>
+<script src=USAData_176.js></script>
 
 <script>
 
