Updated data to 09/16/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -208,6 +208,7 @@
 <script src=IntData_175.js></script>
 <script src=IntData_176.js></script>
 <script src=IntData_177.js></script>
+<script src=IntData_178.js></script>
 
 <script>
 
