--- a/covid19reg.html
+++ b/covid19reg.html
@@ -208,6 +208,7 @@
 <script src=RegData_175.js></script>
 <script src=RegData_176.js></script>
 <script src=RegData_177.js></script>
+<script src=RegData_178.js></script>
 
 <script>
 
