--- a/covid19state.html
+++ b/covid19state.html
@@ -151,6 +151,7 @@
 <script src=USAData_175.js></script>
 <script src=USAData_176.js></script>
 <script src=USAData_177.js></script>
+<script src=USAData_178.js></script>
 
 <script>
 
