--- a/covid19usa.html
+++ b/covid19usa.html
@@ -176,6 +176,7 @@
 <script src=USAData_175.js></script>
 <script src=USAData_176.js></script>
 <script src=USAData_177.js></script>
+<script src=USAData_178.js></script>
 
 <script>
 
