Updated data to 09/17/2020

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -209,6 +209,7 @@
 <script src=RegData_176.js></script>
 <script src=RegData_177.js></script>
 <script src=RegData_178.js></script>
+<script src=RegData_179.js></script>
 
 <script>
 
