--- a/covid19usa.html
+++ b/covid19usa.html
@@ -177,6 +177,7 @@
 <script src=USAData_176.js></script>
 <script src=USAData_177.js></script>
 <script src=USAData_178.js></script>
+<script src=USAData_179.js></script>
 
 <script>
 
