Updated date to 09/18/2020

--- a/covid19state.html
+++ b/covid19state.html
@@ -153,6 +153,7 @@
 <script src=USAData_177.js></script>
 <script src=USAData_178.js></script>
 <script src=USAData_179.js></script>
+<script src=USAData_180.js></script>
 
 <script>
 
