--- a/covid19int.html
+++ b/covid19int.html
@@ -210,6 +210,7 @@
 <script src=IntData_177.js></script>
 <script src=IntData_178.js></script>
 <script src=IntData_179.js></script>
+<script src=IntData_180.js></script>
 
 <script>
 
