--- a/covid19reg.html
+++ b/covid19reg.html
@@ -210,6 +210,7 @@
 <script src=RegData_177.js></script>
 <script src=RegData_178.js></script>
 <script src=RegData_179.js></script>
+<script src=RegData_180.js></script>
 
 <script>
 
