--- a/covid19usa.html
+++ b/covid19usa.html
@@ -178,6 +178,7 @@
 <script src=USAData_177.js></script>
 <script src=USAData_178.js></script>
 <script src=USAData_179.js></script>
+<script src=USAData_180.js></script>
 
 <script>
 
