Updated data to 09/19/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -211,6 +211,7 @@
 <script src=IntData_178.js></script>
 <script src=IntData_179.js></script>
 <script src=IntData_180.js></script>
+<script src=IntData_181.js></script>
 
 <script>
 
