--- a/covid19state.html
+++ b/covid19state.html
@@ -154,6 +154,7 @@
 <script src=USAData_178.js></script>
 <script src=USAData_179.js></script>
 <script src=USAData_180.js></script>
+<script src=USAData_181.js></script>
 
 <script>
 
