--- a/covid19reg.html
+++ b/covid19reg.html
@@ -211,6 +211,7 @@
 <script src=RegData_178.js></script>
 <script src=RegData_179.js></script>
 <script src=RegData_180.js></script>
+<script src=RegData_181.js></script>
 
 <script>
 
